// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in checked state 1`] = `
<span
  class="toggler"
>
  <input
    checked=""
    type="checkbox"
  />
  <span />
</span>
`;

exports[`The component should render in unchecked state 1`] = `
<span
  class="toggler"
>
  <input
    type="checkbox"
  />
  <span />
</span>
`;
